@@ -32,16 +32,13 @@
       },
       "runtime" : {
          "requires" : {
-            "File::Share" : "0",
             "File::Spec::Functions" : "0",
             "FindBin" : "0",
             "Module::Runtime" : "0",
             "Mojolicious" : "7.15",
-            "Mojolicious::Plugin::AssetPack" : "0",
             "Mojolicious::Plugin::OpenAPI" : "1.22",
             "Sys::Hostname" : "0",
-            "experimental" : "0",
-            "perl" : "5.024"
+            "perl" : "5.010"
          }
       },
       "test" : {
@@ -60,43 +57,43 @@
    "provides" : {
       "Mojolicious::Plugin::Yancy" : {
          "file" : "lib/Mojolicious/Plugin/Yancy.pm",
-         "version" : "0.009"
+         "version" : "0.010"
       },
       "Yancy" : {
          "file" : "lib/Yancy.pm",
-         "version" : "0.009"
+         "version" : "0.010"
       },
       "Yancy::Backend::Dbic" : {
          "file" : "lib/Yancy/Backend/Dbic.pm",
-         "version" : "0.009"
+         "version" : "0.010"
       },
       "Yancy::Backend::Mysql" : {
          "file" : "lib/Yancy/Backend/Mysql.pm",
-         "version" : "0.009"
+         "version" : "0.010"
       },
       "Yancy::Backend::Pg" : {
          "file" : "lib/Yancy/Backend/Pg.pm",
-         "version" : "0.009"
+         "version" : "0.010"
       },
       "Yancy::Backend::Sqlite" : {
          "file" : "lib/Yancy/Backend/Sqlite.pm",
-         "version" : "0.009"
+         "version" : "0.010"
       },
       "Yancy::Backend::Test" : {
          "file" : "lib/Yancy/Backend/Test.pm",
-         "version" : "0.009"
+         "version" : "0.010"
       },
       "Yancy::Controller::Yancy" : {
          "file" : "lib/Yancy/Controller/Yancy.pm",
-         "version" : "0.009"
+         "version" : "0.010"
       },
       "Yancy::Controller::Yancy::MultiTenant" : {
          "file" : "lib/Yancy/Controller/Yancy/MultiTenant.pm",
-         "version" : "0.009"
+         "version" : "0.010"
       },
       "Yancy::Plugin::Auth::Basic" : {
          "file" : "lib/Yancy/Plugin/Auth/Basic.pm",
-         "version" : "0.009"
+         "version" : "0.010"
       }
    },
    "release_status" : "stable",
@@ -111,7 +108,7 @@
          "web" : "https://github.com/preaction/Yancy"
       }
    },
-   "version" : "0.009",
+   "version" : "0.010",
    "x_authority" : "cpan:PREACTION",
    "x_contributors" : [
       "Mohammad S Anwar <mohammad.anwar@yahoo.com>",
